<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bg"
    android:orientation="vertical"
    tools:context=".addbooks">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <EditText
        android:layout_marginLeft="130dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="200dp"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:fontFamily="sans-serif-light"
        android:background="@drawable/et_bg"
        android:id="@+id/et1"
        android:hint="enter book name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_marginLeft="130dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:fontFamily="sans-serif-light"
        android:background="@drawable/et_bg"
        android:id="@+id/et2"
        android:hint="enter no.of copies"/>
</LinearLayout>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/up"
        android:layout_marginTop="50dp"
        android:text="ADD"

        android:textAllCaps="false"
        android:background="@drawable/btn_bg"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:textSize="16sp"
        android:id="@+id/b1"/>


</LinearLayout>