<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bg"
    android:orientation="vertical"
    tools:context=".Request">
    <TextView
        android:id="@+id/avl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"

        android:textSize="30sp"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-medium"
        android:layout_marginTop="20dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/up"
        android:gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:text="Take Book"
        android:textAllCaps="false"
        android:background="@drawable/btn_bg"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/tb"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/up"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="Go Home"
        android:textAllCaps="false"
        android:background="@drawable/btn_bg"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/gh"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/up"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="view cart"
        android:textAllCaps="false"
        android:background="@drawable/btn_bg"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/gc"/>
    <Button
        android:layout_width="210dp"
        android:layout_height="40dp"
        android:layout_below="@+id/up"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="Continue search"
        android:textAllCaps="false"
        android:background="@drawable/btn_bg"
        android:textColor="@color/white"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/cc"/>


</LinearLayout>