...
        android:textColor="@color/white"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:id="@+id/search"
        android:layout_gravity="center_horizontal"/>
    <Button
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_below="@+id/up"
        android:layout_marginTop="50dp"
...
        android:textColor="@color/white"
        android:fontFamily="sans-serif-medium"
        android:paddingLeft="70dp"
        android:paddingRight="70dp"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:id="@+id/logout"
        android:layout_gravity="center_horizontal"/>



</LinearLayout>
