<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bg"
    android:animateLayoutChanges="true"
    tools:context=".MainActivity">
    <RelativeLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        >
        <ImageView
            android:id="@+id/imgView_logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/icon"
            android:layout_marginTop="12dp"
            android:adjustViewBounds="true"
            android:scaleType="fitStart"/>
        <TextView
            android:id="@+id/logo_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="5dp"
            android:text="lms"
            android:textSize="30sp"
            android:textFontWeight="@android:integer/config_longAnimTime"
            android:textColorHighlight="@color/colorPrimaryDark"
            android:textColor="@color/white"
            android:fontFamily="sans-serif-medium"
            android:layout_toRightOf="@id/imgView_logo"
            android:visibility="gone"/>
        <RelativeLayout
            android:id="@+id/rellay1"
            android:layout_below="@+id/imgView_logo"
            android:layout_width="wrap_content"
            android:visibility="gone"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="20dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:text="Username"
                        android:textAllCaps="true"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:fontFamily="sans-serif-light"
                        android:background="@drawable/et_bg"
                        android:id="@+id/et1"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:text="Password"
                        android:textAllCaps="true"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        />
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:textSize="15sp"
                        android:textColor="@color/white"
                        android:paddingLeft="15dp"
                        android:paddingRight="15dp"
                        android:fontFamily="sans-serif-light"
                        android:background="@drawable/et_bg"
                        android:inputType="textPassword"
                        android:id="@+id/et2"/>
                </LinearLayout>


            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_below="@+id/up"
                android:layout_marginTop="50dp"
                android:text="Login"
                android:textAllCaps="false"
                android:background="@drawable/btn_bg"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-medium"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:layout_centerHorizontal="true"
                android:textSize="16sp"
                android:id="@+id/b1"/>
        </RelativeLayout>


    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rellay2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:visibility="gone"
        android:layout_alignParentBottom="true">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:text="Signup"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:fontFamily="sans_serif"
            android:id="@+id/b2"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:layout_alignParentRight="true"
            android:text="Forgot Password"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:fontFamily="sans_serif"
            android:id="@+id/b3"/>
    </RelativeLayout>

</RelativeLayout>